// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`keeps objects as is 1`] = `
"\\"use strict\\";

var fill1 = function fill1() {
  var top = arguments.length > 0 && arguments[0] !== undefined ? arguments[0] : 0;
  var left = arguments.length > 1 && arguments[1] !== undefined ? arguments[1] : 0;
  var right = arguments.length > 2 && arguments[2] !== undefined ? arguments[2] : 0;
  var bottom = arguments.length > 3 && arguments[3] !== undefined ? arguments[3] : 0;
  return {
    position: 'absolute',
    top: top,
    right: right,
    bottom: bottom,
    left: left
  };
};

var fill2 = function fill2() {
  var top = arguments.length > 0 && arguments[0] !== undefined ? arguments[0] : 0;
  var left = arguments.length > 1 && arguments[1] !== undefined ? arguments[1] : 0;
  var right = arguments.length > 2 && arguments[2] !== undefined ? arguments[2] : 0;
  var bottom = arguments.length > 3 && arguments[3] !== undefined ? arguments[3] : 0;
  return {
    position: 'absolute',
    top: top,
    right: right,
    bottom: bottom,
    left: left
  };
};

exports.__linariaPreval = [fill1, fill2];"
`;

exports[`keeps only code which is related to \`a\` 1`] = `
"\\"use strict\\";

var _require = require('…'),
    color = _require.whiteColor,
    anotherColor = _require.anotherColor;

var a = color || anotherColor;
color.green = '#0f0';
exports.__linariaPreval = [a];"
`;

exports[`keeps only code which is related to \`anotherColor\` 1`] = `
"\\"use strict\\";

var _require = require('…'),
    anotherColor = _require.anotherColor;

exports.__linariaPreval = [anotherColor];"
`;

exports[`keeps only code which is related to \`color\` 1`] = `
"\\"use strict\\";

var _require = require('…'),
    color = _require.whiteColor;

color.green = '#0f0';
exports.__linariaPreval = [color];"
`;

exports[`removes all 1`] = `
"\\"use strict\\";

exports.__linariaPreval = [];"
`;

exports[`shakes assignment patterns 1`] = `
"\\"use strict\\";

var _interopRequireDefault = require(\\"@babel/runtime/helpers/interopRequireDefault\\");

var _toArray2 = _interopRequireDefault(require(\\"@babel/runtime/helpers/toArray\\"));

var _extends2 = _interopRequireDefault(require(\\"@babel/runtime/helpers/extends\\"));

var _ = 2,
    identifier = _ === void 0 ? 1 : _;
var _a$b = {
  a: 1,
  b: 2
};
_a$b = _a$b === void 0 ? {} : _a$b;
var object = (_extends2.default)({}, _a$b);
var _ref = [1, 2, 3, 4];
_ref = _ref === void 0 ? [] : _ref;

var _ref2 = (_toArray2.default)(_ref),
    array = _ref2.slice(0);

var obj = {
  member: null
};
var _2 = 1;
obj.member = _2 === void 0 ? 42 : _2;
exports.__linariaPreval = [identifier, object, array, obj];"
`;

exports[`shakes es5 exports 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.redColor = 'red';
Object.defineProperty(exports, \\"greenColor\\", {
  enumerable: true,
  get: function get() {
    return 'green';
  }
});"
`;

exports[`shakes exports 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});

var _ = require(\\"\\\\u2026\\");

var a = _.whiteColor;
exports.__linariaPreval = [a];"
`;

exports[`shakes for-in statements 1`] = `
"\\"use strict\\";

var obj1 = {
  a: 1,
  b: 2
};
var obj2 = {};

for (var key in obj1) {
  obj2[key] = obj1[key];
}

exports.__linariaPreval = [obj2];"
`;

exports[`shakes imports 1`] = `
"\\"use strict\\";

var _interopRequireWildcard = require(\\"@babel/runtime/helpers/interopRequireWildcard\\");

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});

var _ = _interopRequireWildcard(require(\\"\\\\u2026\\"));

exports.__linariaPreval = [_.whiteColor, _.default];"
`;

exports[`shakes sequence expression 1`] = `
"\\"use strict\\";

var color1 = (function () {
  return 'blue';
});
var local = '';
var color2 = (local = color1(), function () {
  return local;
});
exports.__linariaPreval = [color2];"
`;

exports[`should keep member expression key 1`] = `
"\\"use strict\\";

var key = 'blue';
var obj = {
  blue: '#00F'
};
var blue = obj[key];
exports.__linariaPreval = [blue];"
`;
